# web-ai-template

./: .dockerignore  .gitignore  .spectra.yaml  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_users_table.py
backend/app/: auth.py  config.py  db.py  main.py
backend/app/models/: user.py
backend/app/routers/: __init__.py  me.py  users.py
backend/app/schemas/: __init__.py  user.py
backend/tests/: test_auth.py  test_me.py  test_users_auth.py
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.vue  auth.ts  main.ts
frontend/src/api/: users.ts
frontend/src/components/: HealthCheck.vue
frontend/src/views/: UsersView.vue
keycloak/: realm-export.json
nginx/: Dockerfile  nginx.conf
openspec/changes/archive/2026-06-06-bootstrap-vue-fastapi-stack/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-07-sqlmodel-db-layer/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-07-user-management-crud/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/bootstrap-vue-fastapi-stack/: .openspec.yaml
openspec/changes/bootstrap-vue-fastapi-stack/specs/frontend-spa/: spec.md
openspec/changes/keycloak-oidc-auth/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/keycloak-oidc-auth/specs/backend-api/: spec.md
openspec/changes/keycloak-oidc-auth/specs/container-deploy/: spec.md
openspec/specs/backend-api/: spec.md
openspec/specs/container-deploy/: spec.md
openspec/specs/frontend-spa/: spec.md
openspec/specs/postgres-db/: spec.md
openspec/specs/user-api/: spec.md
openspec/specs/user-management-ui/: spec.md
(+12 files in other folders)
