[project]
name = "web-ai-template-backend"
version = "0.1.0"
description = "FastAPI backend scaffold for the web-ai-template."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "aioodbc>=0.5",
    "asyncpg>=0.29",
    "fastapi>=0.115",
    "pyodbc>=5.2",
    "pydantic[email]>=2.5",
    "pydantic-settings>=2.5",
    "sqlalchemy[asyncio]>=2.0",
    "sqlmodel>=0.0.21",
    "uvicorn[standard]>=0.30",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"
